# MM_Propagation

./: CMakeLists.txt  README.md
Matlab/: CMakeLists.txt  MMPropagation_Matio.cpp  MMPropagation_Matio2.cpp  set_Parameters.m  test1.m
doc/: userguide.aux  userguide.out  userguide.tex
examples/: CMakeLists.txt  GRIN2.cpp  GRIN2.m  test_RK.cpp  test_orderRK.cpp
findMATIO/: FindMATIO.cmake
include/: ComplexArray.hpp  ComplexArraysContainer.hpp  ComplexArraysContainerGPU.cuh  DiscreteFourierTransform.hpp  MultimodePropagation.hpp  MultimodePropagation_CPU.hpp  MultimodePropagation_GPU.cuh  RungeKutta.hpp  Sparse3DArray.hpp
matio/: CMakeLists.txt
matlab/: GRIN2.m  mm_propagation.cpp
simulations/: main.cpp  main_GPU.cu
src/: CMakeLists.txt  ComplexArray.cpp  ComplexArray.hpp  ComplexArraysContainer.cpp  ComplexArraysContainerGPU.cu  DiscreteFourierTransform.cpp  DiscreteFourierTransform.hpp  LawsonRK.cpp  LawsonRK.hpp  MultimodePropagation.cpp  MultimodePropagation.hpp  MultimodePropagation_CPU.cpp  MultimodePropagation_GPU.cu  Nonlinearity.cpp  Nonlinearity.hpp  RungeKutta.cpp  RungeKutta.hpp  Sparse3DArray.cpp  Sparse3DMatrix.cpp  Sparse3DMatrix.hpp  readMatFile.cpp  readMatFile.hpp  writeMatFile.cpp  writeMatFile.hpp
